<resources>
    <string name="app_name">Gym App</string>
    <string name="welcome_text">Welcome!</string>
    <string name="routine_text">Let\'s set up your routine for the day.</string>
    <string name="date_text">Date</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="datePicker">datePicker</string>
    <string name="time_text">Time</string>
    <string name="date">"Date: "</string>
    <string name="timepicker">timePicker</string>
    <string name="time">"Time: "</string>
    <string name="get_started">Get Started!</string>
    <string name="activity2_name">Gym App</string>
    <string name="second_open_text">What are we working on today?</string>
    <string name="dumbbells">Dumbbells</string>
    <string name="submit">Submit</string>
    <string name="weight_lbs">Weight(lbs)</string>
    <string name="dumbbell_rack">dumbbell rack</string>
    <string name="secondary_text">sectex</string>
    <string name="supplimental_text">supptext</string>
    <string name="reps_hint">Reps</string>
    <string name="enter_Weight">Enter Weight</string>
    <string name="Repetitions">Repetitions</string>
    <string name="trainingSetsHint">trainSets</string>
    <string name="sets_hint">Sets</string>
    <string name="sets">Sets</string>
    <string name="dumbbell_description">Used to build and tone various muscles, dumbbells allow you to target a certain area of the body.</string>
    <string name="desc_row">Picture of Seated Cable Row</string>
    <string name="cable_row_description">Used to develop muscles of the back and forearms. It is important that you keep your back straight during this exercise to avoid injury.</string>
    <string name="seated_cable_row">Seated Cable Row</string>
    <string name="lat_pull_down_content">Lat Pull down</string>
    <string name="lat_pull_down_maintext">Lateral Pull Down</string>
    <string name="lat_secondarytext">Used to build latissimus dorsi(located in back), biceps, and muscles of the forearm. This a compound exercise. Widening your grip on the bar puts more emphasis on the lats and less on the arms.</string>

    <!--Spinner for dumbbells-->
    <string-array name="labels_array">
        <item>Shoulder Press</item>
        <item>Incline Press</item>
        <item>Lying Triceps Extension(Skull Crushers)</item>
        <item>Single-arm Row</item>
        <item>Two-arm Row</item>
    </string-array>
</resources>