<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/working_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/second_open_text"
        android:textColor="#039BE5"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="624dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.card.MaterialCardView>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/working_text">

        <!--this starts the card for dumbbells-->
        <!--https://yorkbarbell.com/product/st-low-row/-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#366DBA1C"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/checkBox6"
            tools:layout_editor_absoluteX="4dp">


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="10dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="20dp"
                app:strokeColor="#039BE5"
                app:strokeWidth="5dp">

                <TextView
                    android:id="@+id/dumbbell_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/dumbbells"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/dumbbell_description"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

                <Spinner
                    android:id="@+id/dumbbell_spinner"
                    android:layout_width="351dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@android:drawable/btn_dropdown"
                    android:popupBackground="#FFFFFF"
                    android:spinnerMode="dropdown" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:layout_marginTop="150dp"
                    android:contentDescription="@string/dumbbell_rack"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/dumbbell" />

                <EditText
                    android:id="@+id/weight_EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="41dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="325dp"
                    android:autofillHints="@string/enter_Weight"
                    android:hint="@string/weight_lbs"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textColorLink="#000000"
                    android:visibility="visible"
                    tools:visibility="visible">

                </EditText>

                <EditText
                    android:id="@+id/reps_EditText"
                    android:layout_width="108dp"
                    android:layout_height="41dp"
                    android:layout_marginStart="130dp"
                    android:layout_marginLeft="130dp"
                    android:layout_marginTop="325dp"
                    android:autofillHints="@string/Repetitions"
                    android:hint="@string/reps_hint"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textColorLink="#000000"
                    android:visibility="visible"
                    tools:visibility="visible">

                </EditText>

                <EditText
                    android:id="@+id/setsdumbbells"
                    android:layout_width="108dp"
                    android:layout_height="41dp"
                    android:layout_marginStart="240dp"
                    android:layout_marginLeft="240dp"
                    android:layout_marginTop="325dp"
                    android:autofillHints="@string/Repetitions"
                    android:hint="@string/sets"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textColorLink="#000000"
                    android:visibility="visible"
                    tools:visibility="visible">

                </EditText>
            </com.google.android.material.card.MaterialCardView>
            <!--this ends the dumbbell card layout-->

            <!--seated cable row starts-->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="30dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="20dp"
                app:strokeColor="#039BE5"
                app:strokeWidth="5dp">


                <TextView
                    android:id="@+id/CableRowTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/seated_cable_row"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <TextView
                    android:id="@+id/CableRowText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/cable_row_description"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:layout_marginTop="150dp"
                    android:contentDescription="@string/desc_row"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/rowpicture" />

                <EditText
                    android:id="@+id/weightCable"
                    android:layout_width="wrap_content"
                    android:layout_height="41dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="330dp"
                    android:autofillHints="@string/enter_Weight"
                    android:hint="@string/weight_lbs"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textColorLink="#000000"
                    android:visibility="visible"
                    tools:visibility="visible">

                </EditText>

                <EditText
                    android:id="@+id/reps_cable"
                    android:layout_width="108dp"
                    android:layout_height="41dp"
                    android:layout_marginStart="130dp"
                    android:layout_marginLeft="130dp"
                    android:layout_marginTop="330dp"
                    android:autofillHints="@string/Repetitions"
                    android:hint="@string/reps_hint"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textColorLink="#000000"
                    android:visibility="visible"
                    tools:visibility="visible">

                </EditText>

                <EditText
                    android:id="@+id/setsrow"
                    android:layout_width="108dp"
                    android:layout_height="41dp"
                    android:layout_marginStart="240dp"
                    android:layout_marginLeft="240dp"
                    android:layout_marginTop="330dp"
                    android:autofillHints="@string/Repetitions"
                    android:hint="@string/sets"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textColorLink="#000000"
                    android:visibility="visible"
                    tools:visibility="visible">

                </EditText>
            </com.google.android.material.card.MaterialCardView>


            <!--Starts lat pull down-->
            <!--https://www.fitnessgiant.com/yoselatpuma.html-->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="30dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="20dp"
                app:strokeColor="#039BE5"
                app:strokeWidth="5dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/lat_pull_down_maintext"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <TextView

                    android:id="@+id/latPullDown_secondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/lat_secondarytext"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:layout_marginTop="150dp"
                    android:contentDescription="@string/lat_pull_down_content"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/latpulldownmachine" />

                <EditText
                    android:id="@+id/weightpull"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="330dp"
                    android:autofillHints="@string/enter_Weight"
                    android:hint="@string/weight_lbs"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textColorLink="#000000"
                    android:visibility="visible"
                    tools:visibility="visible">

                </EditText>

                <EditText
                    android:id="@+id/repspull"
                    android:layout_width="108dp"
                    android:layout_height="41dp"
                    android:layout_marginStart="130dp"
                    android:layout_marginLeft="130dp"
                    android:layout_marginTop="330dp"
                    android:autofillHints="@string/Repetitions"
                    android:hint="@string/reps_hint"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textColorLink="#000000"
                    android:visibility="visible"
                    tools:visibility="visible">

                </EditText>

                <EditText
                    android:id="@+id/setspull"
                    android:layout_width="108dp"
                    android:layout_height="41dp"
                    android:layout_marginStart="240dp"
                    android:layout_marginLeft="240dp"
                    android:layout_marginTop="330dp"
                    android:autofillHints="@string/Repetitions"
                    android:hint="@string/sets"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textColorLink="#000000"
                    android:visibility="visible"
                    tools:visibility="visible">

                </EditText>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="10dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="20dp"
                app:strokeColor="#039BE5"
                app:strokeWidth="5dp">

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>